# Ocular_Core_Lite

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml
src/ocular_core/: __init__.py  generator.py  stress.py  texture.py
